--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -345,12 +345,12 @@ Max 3 times in 1 turn"
 [base skill] Apply {{ 275 | status_description }} to all allies for 3 next attack(s) /100%"
 1198104: "[base skill] Apply {{ 274 | status_description }} to all allies for 2 next attack(s) /100% <br>\
 [base skill] Apply {{ 275 | status_description }} to all allies for 3 next attack(s) /100%"
-3198101: "[after using S3] apply {{ 'status_atkup' | status_manual: 'Overall Atk+', 'Increase all allies Atk by 5%, doesn't stack with same effect buff' }} to all allies for 2 turn /100%" 
-3198102: "[after using S3] apply {{ 'status_atkup' | status_manual: 'Overall Atk+', 'Increase all allies Atk by 6%, doesn't stack with same effect buff' }} to all allies for 2 turn /100%"
-3198103: "[after using S3] apply {{ 'status_atkup' | status_manual: 'Overall Atk+', 'Increase all allies Atk by 7%, doesn't stack with same effect buff' }} to all allies for 2 turn /100%"
-3198104: "[after using S3] apply {{ 'status_atkup' | status_manual: 'Overall Atk+', 'Increase all allies Atk by 8%, doesn't stack with same effect buff' }} to all allies for 2 turn /100%"
-3198105: "[after using S3] apply {{ 'status_atkup' | status_manual: 'Overall Atk+', 'Increase all allies Atk by 9%, doesn't stack with same effect buff' }} to all allies for 2 turn /100%"
-3198106: "[after using S3] apply {{ 'status_atkup' | status_manual: 'Overall Atk+', 'Increase all allies Atk by 10%, doesn't stack with same effect buff' }} to all allies for 2 turn /100%"
+3198101: "[after using S3] apply {{ 'status_atkup' | status_manual: 'Overall Atk+', 'Increase all allies Atk by 5%, not stack with same effect buff' }} to all allies for 2 turn /100%" 
+3198102: "[after using S3] apply {{ 'status_atkup' | status_manual: 'Overall Atk+', 'Increase all allies Atk by 6%, not stack with same effect buff' }} to all allies for 2 turn /100%"
+3198103: "[after using S3] apply {{ 'status_atkup' | status_manual: 'Overall Atk+', 'Increase all allies Atk by 7%, not stack with same effect buff' }} to all allies for 2 turn /100%"
+3198104: "[after using S3] apply {{ 'status_atkup' | status_manual: 'Overall Atk+', 'Increase all allies Atk by 8%, not stack with same effect buff' }} to all allies for 2 turn /100%"
+3198105: "[after using S3] apply {{ 'status_atkup' | status_manual: 'Overall Atk+', 'Increase all allies Atk by 9%, not stack with same effect buff' }} to all allies for 2 turn /100%"
+3198106: "[after using S3] apply {{ 'status_atkup' | status_manual: 'Overall Atk+', 'Increase all allies Atk by 10%, not stack with same effect buff' }} to all allies for 2 turn /100%"
 
 # Sadayoshi variant passive
 8081201: ""
