--- a/_data/wiki/VoiceActor.yml
+++ b/_data/wiki/VoiceActor.yml
@@ -104,3 +104,7 @@
   en: "Tomoyuki Shimura" 
 "浦和めぐみ":
   en: "Megumi Urawa" 
+"小西克幸":
+  en: "Katsuyuki Konishi" 
+"藤原貴弘":
+  en: "Takahiro Fujiwara"
