--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -845,11 +845,11 @@
   description: "Increase Atk of all allies by 5% every 2 stack, neither a buff nor debuff"
   isGoodStatus: 2
   icon: ""
-"1122202":
-  name: "Limit"
-  description: "Multiply S1,S2 and S3 damage by 1.15x per stack, neither a buff nor debuff"
+"1122201":
+  name: "Reboot"
+  description: ""
   isGoodStatus: 2
-  icon: ""
+  icon: "status_reboot"
 "1122205":
   name: "Deccelerate"
   description: "Reduce speed by 10 per stack, neither a buff nor debuff"
