--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -1298,6 +1298,10 @@
 1160102: Drilling Break
 1160103: Pierce All Unknowns
 1160104: Pierce All Unknowns+
+1160201: Heavy Fire
+1160202: Arms Break
+1160203: Pierce All Barriers
+1160204: Pierce All Unknowns+
 2160101: Excavation Survey
 2160102: Excavation Survey+
 2160103: Excavation Survey++
@@ -1308,6 +1312,7 @@
 3160105: Fieldwork Approach V
 3160106: Fieldwork Approach VI
 8160101: Excavate
+8160204: Onslaught
 # Theoreol
 1161101: Extractum
 1161102: Aqua Vitae
@@ -1442,6 +1447,36 @@
 3192106: Heat-trapping flames VI
 8192101: Adventskranz
 8192102: Astar Auto
+# Shidemasu
+1206101: Schiacciamento
+1206102: Atto Protettivo
+1206103: Sigillo di Promessa
+1206104: Schiacciamento+
+2206101: Protective Action
+2206102: Protective Action+
+2206103: Protective Action++
+3206101: Customer Support I
+3206102: Customer Support II
+3206103: Customer Support III
+3206104: Customer Support IV
+3206105: Customer Support V
+3206106: Customer Support VI
+8206103: Shidemasu Auto
+# Bygul
+1207101: Reckless Rush
+1207102: All My Power
+1207103: Cosmic Blast
+1207104: Cosmic Blast+
+2207101: Engine Full Throttle
+2207102: Engine Full Throttle+
+2207103: Engine Full Throttle++
+3207101: Newcomer who loves his peers I
+3207102: Newcomer who loves his peers II
+3207103: Newcomer who loves his peers III
+3207104: Newcomer who loves his peers IV
+3207105: Newcomer who loves his peers V
+3207106: Newcomer who loves his peers VI
+8207104: Bygul Auto
 # Player
 2999101: Exceptional Good Luck
 2999102: Exceptional Good Luck+
