--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -360,7 +360,7 @@ Max 3 times in 1 turn"
 8063201: ""
 
 # Shidemasu passive
-8206101: "[When an ally except self has <50% HP] Apply {{ 5 | status_description }} to self for 1 turn /100%"
+8206101: "[When an ally except self take damage and has <50% HP] Apply {{ 5 | status_description }} to self for 1 next attack /100%"
 
 # Shoen Skevo S1
 1012105: "[base skill] Deal 60% of damage to target enemy /100%<br>\
