--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -850,6 +850,11 @@
   description: ""
   isGoodStatus: 2
   icon: "status_reboot"
+"1122202":
+  name: "Limit"
+  description: "Multiply S1,S2 and S3 damage by 1.15x per stack, neither a buff nor debuff"
+  isGoodStatus: 2
+  icon: ""
 "1122205":
   name: "Deccelerate"
   description: "Reduce speed by 10 per stack, neither a buff nor debuff"
