--- a/_data/wiki/Affiliation.yml
+++ b/_data/wiki/Affiliation.yml
@@ -27,7 +27,7 @@
 "アラディシア王国騎兵隊":
   en: "Royal Aradissian Cavalry"
 "S&S Heros":
-  en: "S&S Heros"
+  en: "S&S Heroes"
 "日本国防衛局":
   en: "Japan Self-Defense Authorities"
 "ギルド・イーグルアイズ":
