--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -735,41 +735,6 @@
   description: "Atk+10%, if atk accumulation already exist add atk+10% to existing accumulation and reset turn count (max +100%)."
   isGoodStatus: 2
   icon: "status_firepower"
-"1033101":
-  name: "Sunlight"
-  description: "Atk+20% for 1 action"
-  isGoodStatus: 2
-  icon: "status_system_atkup"
-"1033102":
-  name: "Fresh Green"
-  description: "When under 50% HP remove this status and heal by {{ effects.OneTimeHeal.parameter.value }} % Atk of the invoker of this status"
-  isGoodStatus: 2
-  icon: "status_regenerate"
-"1034101":
-  name: "Huckle Special"
-  description: "Add 1 stack after huckle act again"
-  isGoodStatus: 2
-  icon: ""
-"1035101":
-  name: "Multi Observation"
-  description: "Exio special buff"
-  isGoodStatus: 2
-  icon: "b_skill_special"
-"1051202":
-  name: "Waltz"
-  description: "Atk+20% for 2 turn, cannot be given to Moonlight Shadow Nessen"
-  isGoodStatus: 1
-  icon: "status_buff_special"
-"1051205":
-  name: "Nessen Special"
-  description: "Act as number counter"
-  isGoodStatus: 1
-  icon: ""
-"1081201":
-  name: "Buff Count"
-  description: "Act as number counter"
-  isGoodStatus: 2
-  icon: ""
 "1031201":
   name: "Starlight"
   description: "Every time an ally except \"Starry Night\" Monomasa deals damage to enemy, charge +1 (up to 8). This is neither buff nor debuff."
@@ -785,11 +750,51 @@
   description: "Act as number counter."
   isGoodStatus: 2
   icon: ""
+"1033101":
+  name: "Sunlight"
+  description: "Atk+20% for 1 action"
+  isGoodStatus: 2
+  icon: "status_system_atkup"
+"1033102":
+  name: "Fresh Green"
+  description: "When under 50% HP remove this status and heal by {{ effects.OneTimeHeal.parameter.value }} % Atk of the invoker of this status"
+  isGoodStatus: 2
+  icon: "status_regenerate"
+"1034101":
+  name: "Huckle Special"
+  description: "Add 1 stack after huckle act again"
+  isGoodStatus: 2
+  icon: ""
 "1034102":
   name: "Continuous Leap"
   description: "Increase speed by 1 per stack, neither buff nor debuff"
   isGoodStatus: 2
   icon: "status_spdup"
+"1035101":
+  name: "Multi Observation"
+  description: "Exio special buff"
+  isGoodStatus: 2
+  icon: "b_skill_special"
+"1051202":
+  name: "Waltz"
+  description: "Atk+20% for 2 turn, cannot be given to Moonlight Shadow Nessen"
+  isGoodStatus: 1
+  icon: "status_buff_special"
+"1051205":
+  name: "Nessen Special"
+  description: "Act as number counter"
+  isGoodStatus: 1
+  icon: ""
+"1064204":
+  name: "Limelight"
+  description: "Atk+40% for each View status of self or allies with View Role. Minimum Atk+500, max Atk+3000, neither buff nor debuff"
+  isGoodStatus: 1
+  icon: "status_buff_special"
+"1081201":
+  name: "Buff Count"
+  description: "Act as number counter"
+  isGoodStatus: 2
+  icon: ""
 "1075211":
   name: "Assault"
   description: "Increase atk by 5% per buff duration removed(Max 50%)"
