--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -171,19 +171,19 @@ of view after the skill is cast (maxed at 11000 view) /100%<br>\
 # Kalaski Variant S3, passive
 1064203: "[base skill] Remove 1 buff(s) from target enemy /100% <br>\
 [base skill] Deal 180% of damage to target enemy /100% <br>\
-[base skill] Apply {{ 12 | status_description }} to target enemy for 1-4 next attack (Increased every 3000 available View after skill use) /100%"
+[base skill] Apply {{ 12 | status_description }} to target enemy for 1-4 next attack (Increased every 3000 available View after skill use, max 4 next attack at extra 12000 view) /100%"
 
 1064204: "[base skill] Remove 1 buff(s) from target enemy /100% <br>\
 [base skill] Deal 200% of damage to target enemy /100% <br>\
-[base skill] Apply {{ 12 | status_description }} to target enemy for 1-4 next attack (Increased every 3000 available View after skill use) /100%"
+[base skill] Apply {{ 12 | status_description }} to target enemy for 1-4 next attack (Increased every 3000 available View after skill use, max 4 next attack at extra 12000 view) /100%"
 
 8064201: "[Constant Activation] Apply {{ 1064204 | status_description }} to self and ally with View role /100%"
 8064202: ""
-8064203: "[Constant Activation] Every 3000 view consumed by an ally increase a poin of gauge(above the hp bar), when gauge is full (after 30000 view) S1 effect is changed for 2 turn into: <br>\
+8064204: "[Constant Activation] Every 3000 view consumed by an ally increase a poin of gauge(above the hp bar), when gauge is full (after 30000 view) S1 effect is changed for 2 turn into: <br>\
 [base skill] Deal 130% of damage to target enemy /100% <br>\
 [base skill] Deal 50% of damage to all enemies except target /100% <br>\
 [base skill] Apply {{ 268 | status_description }} for 1 turn to all enemies /100%"
-8064204: ""
+8064205: ""
 
 # Kouki S1 Skevo
 1018105: "[base skill] Deal 60% of damage to target enemy /100% <br>\
