--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -785,11 +785,16 @@
   description: "Act as number counter"
   isGoodStatus: 1
   icon: ""
+"1064202":
+  name: "Limelight"
+  description: "Change S1 effect for 2 turn"
+  isGoodStatus: 1
+  icon: "status_buff_special"
 "1064204":
   name: "Limelight"
   description: "Atk+40% for each View status of self or allies with View Role. Minimum Atk+500, max Atk+3000, neither buff nor debuff"
   isGoodStatus: 1
-  icon: "status_buff_special"
+  icon: "b_skill_special"
 "1081201":
   name: "Buff Count"
   description: "Act as number counter"
