--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -179,7 +179,7 @@ of view after the skill is cast (maxed at 11000 view) /100%<br>\
 
 8064201: "[Constant Activation] Apply {{ 1064204 | status_description }} to self and ally with View role /100%"
 8064202: ""
-8064204: "[Constant Activation] Every 3000 view consumed by an ally increase a poin of gauge(above the hp bar), when gauge is full (after 30000 view) S1 effect is changed for 2 turn into: <br>\
+8064204: "[Constant Activation] Every 3000 view consumed by an ally increase a poin of gauge(above the hp bar), when gauge is full (after 30000 view) apply {{ 1064202 | status_description }} to self changing S1 effect into: <br>\
 [base skill] Deal 130% of damage to target enemy /100% <br>\
 [base skill] Deal 50% of damage to all enemies except target /100% <br>\
 [base skill] Apply {{ 268 | status_description }} for 1 turn to all enemies /100%"
