--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -805,6 +805,11 @@
   description: "Increase atk by 5% per buff duration removed(Max 50%)"
   isGoodStatus: 2
   icon: "status_buff_special"
+"1101201":
+  name: "Rain Blessing"
+  description: "Increase atk by 5% per stack(Max 5 stack), remove 1 stack at the end of turn"
+  isGoodStatus: 2
+  icon: "status_system_atkup"
 "1123101":
   name: "Cerastium Special"
   description: "When attacked, counter attack with skill 1 (max 2 times per turn)"
