--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -355,6 +355,12 @@ Max 3 times in 1 turn"
 [turn end] Remove all {{ 1122205 | status_description }} from self /100%"
 
 # Roudin Passive
+3209101: "[when appearing] ATK Up by 2.5% to self, every 5000 view at the start of action also increase Atk by an extra 2.5% (max at 20000 view) /100%"
+3209102: "[when appearing] ATK Up by 3% to self, every 5000 view at the start of action also increase Atk by an extra 3% (max at 20000 view) /100%"
+3209103: "[when appearing] ATK Up by 3.5% to self, every 5000 view at the start of action also increase Atk by an extra 3.5% (max at 20000 view) /100%"
+3209104: "[when appearing] ATK Up by 4% to self, every 5000 view at the start of action also increase Atk by an extra 4% (max at 20000 view) /100%"
+3209105: "[when appearing] ATK Up by 4.5% to self, every 5000 view at the start of action also increase Atk by an extra 4.5% (max at 20000 view) /100%"
+3209106: "[when appearing] ATK Up by 5% to self, every 5000 view at the start of action also increase Atk by an extra 5% (max at 20000 view) /100%"
 8209101: "[Always active] Every 3000 view consumed by an ally increase a point of gauge(above the hp bar), when gauge is full (after 30000 view) +20% atk for all allies for 1 next action"
 8209102: ""
 8209110: ""
