--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -787,14 +787,9 @@
   icon: ""
 "1064202":
   name: "Limelight"
-  description: "Change S1 effect for 2 turn"
+  description: "Change S1 effect for 2 turn, increase Atk by 40% of View status for self or allies with View Role. Minimum Atk+500, max Atk+3000, neither buff nor debuff"
   isGoodStatus: 1
   icon: "status_buff_special"
-"1064204":
-  name: "Limelight"
-  description: "Atk+40% for each View status of self or allies with View Role. Minimum Atk+500, max Atk+3000, neither buff nor debuff"
-  isGoodStatus: 1
-  icon: "b_skill_special"
 "1081201":
   name: "Buff Count"
   description: "Act as number counter"
