--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -787,7 +787,7 @@
   icon: ""
 "1064202":
   name: "Limelight"
-  description: "Change S1 effect for 2 turn, increase Atk by 40% of View status. Minimum Atk+500, max Atk+3000, neither buff nor debuff"
+  description: "Increase Atk by 40% of View status. Minimum Atk+500, max Atk+3000, neither buff nor debuff"
   isGoodStatus: 1
   icon: "status_buff_special"
 "1081201":
