--- a/_data/wiki/Item.yml
+++ b/_data/wiki/Item.yml
@@ -241,4 +241,16 @@
   description: "A memorable and reasonable gift that deliver itself. You can customize the battle model of Viscunam"
 11126101:
   name: "Crystal Amulet"
-  description: "A crystal clear stone that feels somewhat invigorating.. You can customize the battle model of Sensettia"
+  description: "A crystal clear stone that feels somewhat invigorating. You can customize the battle model of Sensettia"
+11081201:
+  name: "Rainbow Crustacean"
+  description: "A type of crab with a suspiciously shiny shell. Not suitable for eating. Customize the battle model of Wild Freedom Sadayoshi"
+11124101:
+  name: "Banana-like Fruit"
+  description: "A valuable source of nutrition found by Giansar on a deserted island. Customize the battle model of Giansar"
+11182101:
+  name: "Toy Crown"
+  description: "A precious memento given to her family in her childhood. Customize the battle model of Zaniah"
+11183101:
+  name: "Tuna Object"
+  description: "An object in the form of a certain migratory fish. The eyes can move around. Customize the battle model of Yuhang"
