--- a/_data/wiki/Item.yml
+++ b/_data/wiki/Item.yml
@@ -250,7 +250,7 @@
   description: "A valuable source of nutrition found by Giansar on a deserted island. Customize the battle model of Giansar"
 11182101:
   name: "Toy Crown"
-  description: "A precious memento given to her family in her childhood. Customize the battle model of Zaniah"
+  description: "A precious memento from her family in her childhood. Customize the battle model of Zaniah"
 11183101:
   name: "Tuna Object"
   description: "An object in the form of a certain migratory fish. The eyes can move around. Customize the battle model of Yuhang"
