--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -330,7 +330,7 @@
   icon: "status_atkup" 
 "67":
   name: "Victom Special"
-  description: "Increase Atk by 0.5% for every 1000 current viewpoint for a maximum of 50%"
+  description: "Increase Atk based on current viewpoint for a maximum of 50% Atk"
   isGoodStatus: 2
   icon: "" 
 "68":
