--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -420,6 +420,13 @@ Max 3 times in 1 turn"
 
 8161101: "[In auto action] Prioritize the third skill when there is an ally with less than 50% HP"
 
+# Victom variant passive, skevo
+8009201: "[while alive] Apply {{ 67 | status_description }} to all allies, maxed at 100000 view"
+8009202: ""
+8009203: ""
+1009206: "<mark>[base skill] Grant {{ 274 | status_description }} to an ally for 2 actions /100%</mark><br>\
+[base skill] Add 9000 views /100%"
+
 # Viscunam S2
 1125102: "[base skill] Add 2000 views /100%<br>\
 [base skill] Apply one of the following invention to target ( 
