--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -366,6 +366,9 @@ Max 3 times in 1 turn"
 8209102: ""
 8209110: ""
 
+# Ryekie S3 Skevo
+1004107: "[base skill] Deal 90% of damage to all enemies + extra 1.8% damage for each point in speed difference with target (max 180%)/100% <br>\
+<mark>[When invoker has {{ 3 | status_description }} ] Extra damage for each point in speed difference is doubled (max damage at 25 speed difference) </mark>"
 
 # Ryekie variant S2 Skevo
 1004206: "[base skill] Apply {{ 1 | status_description }} to target ally for 1 next attack(s) /100% <br>\
