--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -367,7 +367,7 @@ Max 3 times in 1 turn"
 8209110: ""
 
 # Ryekie S3 Skevo
-1004107: "[base skill] Deal 90% of damage to all enemies + extra 1.8% damage for each point in speed difference with target (max 180%)/100% <br>\
+1004107: "[base skill] Deal 90% of damage to all enemies + extra 1.8% damage for each point in speed difference with target (max 180% at 50 speed difference)/100% <br>\
 <mark>[When invoker has {{ 3 | status_description }} ] Extra damage for each point in speed difference is doubled (max damage at 25 speed difference) </mark>"
 
 # Ryekie variant S2 Skevo
