--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -219,7 +219,13 @@ Apply {{ 205 | status_description }} to all enemies /100%"
 
 8101201: "[When alive] Apply 1 stack of {{ 1101201 | status_description }} to ally with max health that is targeted by an active recovery skill /100%"
 8101203: ""
-# Marfik Skevo S1
+
+# Marfik Skevo S2
+1014106: "<mark>[base skill] Apply {{ 275 | status_description }} to an ally for 3 turn(s) /100% <br>\
+[base skill] Apply {{ 5 | status_description }} to self for 3 turn(s) /100%<br>\</mark>
+[base skill] Remove 999 debuff(s) from self /100%"
+
+# Marfik variant Skevo S1
 1014205: "[base skill] Deal 60% of damage to target enemy /100%<br>\
 [base skill] Add 3000 views /100%<br>\
 <mark>[when appearing] Apply 5 stack of {{ 1014203 | status_description }} to all enemies /100%<br>\
