--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -55,6 +55,7 @@
 1004102: Megabolt Crash
 1004103: Gigabolt Breaker
 1004104: Gigabolt Breaker+
+1004107: Gigabolt Breaker++
 1004201: Electro Slash
 1004202: Discharge Banquet
 1004203: Gigabolt Breaker
@@ -158,6 +159,7 @@
 1009202: Technical Riding
 1009203: Lightspeed Phoenix
 1009204: Eddy Wall+
+1009206: Technical Riding+
 # Kyoichi
 1010101: Teacher's Fist
 1010102: Homeroom Leadership
@@ -236,6 +238,7 @@
 1014102: Survivor Soul
 1014103: Ruins Salvage
 1014104: Survivor Soul+
+1014106: Survivor Soul++
 1014201: History Hunting
 1014202: Explorer's Luck
 1014203: Ruins Salvage
