--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -880,6 +880,16 @@
   description: "Cap damage taken to maximum 99% of current HP"
   isGoodStatus: 2
   icon: "status_buff_special"
+"1211101":
+  name: "Scar"
+  description: "Increase damage taken by 5% per stack, +1 stack every damage taken (max 10 stack), removed at the end of action"
+  isGoodStatus: 2
+  icon: "status_costumedamage_debuff"
+"1211103":
+  name: "Hunting Horn"
+  description: "Increases the activation rate of effects with a probability of activation by 10%"
+  isGoodStatus: 2
+  icon: "status_buff_special"
 "3198101":
   name: "Overall Atk+"
   description: "Increase all allies Atk by {{ effects.HighestMultipleAttack.parameter.value | minus: 100 }} %, doesn't stack with same effect buff"
