--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -427,7 +427,7 @@ Max 3 times in 1 turn"
 1211104: "[base skill] Apply {{ 1 | status_description }} to ally with {{ 1211103 | status_description }} for 2 next attack(s) /100% <br>\
 [base skill] Apply {{ 3 | status_description }} and {{ 7 | status_description }} to ally with {{ 1211103 | status_description }} for 3 next attack(s) /100% <br>\
 [base skill] Target ally use S1 to random enemy /100%<br>\
-When there are no ally with {{ 1211103 | status_description }}, target random ally instead"
+[When there are no ally with {{ 1211103 | status_description }} ] target random ally instead"
 8211101: "[when invoker's attack causes damage to enemy with {{ 1211101 | status_description }} ] +1 stack of {{ 1211101 | status_description }} "
 8211102: "[When ally with {{ 1211103 | status_description }} attack with active skill] Self attack all enemies (max 2 times per turn, no combo gain) and add a stack of {{ 1211101 | status_description }} /100% <br>\
 Damage is proportional to how many enemy(s) hit:<br>\
