--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -880,6 +880,11 @@
   description: "Cap damage taken to maximum 99% of current HP"
   isGoodStatus: 2
   icon: "status_buff_special"
+"1210102":
+  name: "Blazing Heat"
+  description: "When self hero skills deal damage to enemy, the HP of the hero with the lowest HP on the team is restored by 20% of the damage inflicted"
+  isGoodStatus: 2
+  icon: "status_buff_special"
 "1211101":
   name: "Scar"
   description: "Increase damage taken by 5% per stack, +1 stack every damage taken (max 10 stack), removed at the end of action"
