--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -55,14 +55,24 @@
 [when an ally is damaged] Apply {{ 'status_bless' | status_manual: 'Bygul Special2', 'Increase HP recovery of recovery skill used by invoker by 10%' }} to self, removed when current turn ends /100%"
 8207104: "[in auto mode] when an ally has <50% hp, prioritize S2 /100%"
 
-# Cerastium S1
+# Canes
+1210101: "[base skill] Deal 20% of damage to target enemy 3 times/100%<br>\
+[base skill] Add 1 combo for each hit/40%"
+1210102: "[base skill] Deal 20% of damage to target enemy 3 times/100%<br>\
+[base skill] Add 1 combo for each hit/40%"
+1210102: "[base skill] Deal 160% of damage to target enemy /100%br>\
+[base skill] Extend existing {{ 1 | status_description }} on all allies by 1 turn /100%br>\
+[base skill] (extra_cond: Combo >= 5) Apply 1 action {{ 1 | status_description }} to all allies without it/100%"
+1210104: "[base skill] Deal 25% of damage to target enemy 3 times/100%<br>\
+[base skill] Add 1 combo for each hit/40%"
+8210101: "[When self has {{ 1 | status_description }} ] Atk +20% for all allies except self"
+8210104: ""
+
+# Cerastium S1 & Passive
 1123101: "[base skill] Deal 60% of damage to target enemy /100%<br>\
 [base skill] Apply {{ 11 | status_description }} target enemy for 1 next attack(s) /40%"
-
 1123104: "[base skill] Deal 60% of damage to target enemy /100%<br>\
 [base skill] Apply {{ 11 | status_description }} target enemy for 1 next attack(s) /100%"
-
-# Cerastium Passive
 8123101: ""
 8123102: ""
 
