--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -58,10 +58,8 @@
 # Canes
 1210101: "[base skill] Deal 20% of damage to target enemy 3 times/100%<br>\
 [base skill] Add 1 combo for each hit/40%"
-1210102: "[base skill] Deal 20% of damage to target enemy 3 times/100%<br>\
-[base skill] Add 1 combo for each hit/40%"
-1210102: "[base skill] Deal 160% of damage to target enemy /100%br>\
-[base skill] Extend existing {{ 1 | status_description }} on all allies by 1 turn /100%br>\
+1210103: "[base skill] Deal 160% of damage to target enemy /100%<br>\
+[base skill] Extend existing {{ 1 | status_description }} on all allies by 1 turn /100%<br>\
 [base skill] (extra_cond: Combo >= 5) Apply 1 action {{ 1 | status_description }} to all allies without it/100%"
 1210104: "[base skill] Deal 25% of damage to target enemy 3 times/100%<br>\
 [base skill] Add 1 combo for each hit/40%"
