--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -422,7 +422,6 @@ Max 3 times in 1 turn"
 [base skill] Apply {{ 11 | status_description }} to target enemy for 1 next attack(s) /50%<br>\
 <mark>[When alive] Reduce view consumption of ally by 4% for each buff they have (max 20%), this effect doesn't stack /100%</mark>"
 
-
 # Sterio
 1211101: "[base skill] Deal 50% of damage to target enemy /100%<br>\
 [base skill] Apply {{ 1211101 | status_description }} to target enemy for 1 next attack(s) /100%"
@@ -437,7 +436,7 @@ Max 3 times in 1 turn"
 [base skill] Target ally use S1 to random enemy /100%<br>\
 [When there are no ally with {{ 1211103 | status_description }} ] target random ally instead"
 8211101: "[when invoker's attack causes damage to enemy with {{ 1211101 | status_description }} ] +1 stack of {{ 1211101 | status_description }} "
-8211102: "[When ally with {{ 1211103 | status_description }} attack with active skill] Self attack all enemies (max 2 times per turn, no combo gain) and add a stack of {{ 1211101 | status_description }} /100% <br>\
+8211102: "[When ally with {{ 1211103 | status_description }} attack with active skill] Self attack target enemy(s) (max 2 times per turn, no combo gain) and add a stack of {{ 1211101 | status_description }} /100% <br>\
 Damage is proportional to how many enemy(s) hit:<br>\
 1 enemy = 50% atk <br>\
 2 enemies = 30% atk <br>\
