--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -820,6 +820,11 @@
   description: "Less likely to be targeted by enemy"
   isGoodStatus: 1
   icon: "status_hide"
+"1140203":
+  name: "Water Mass Compression"
+  description: "Atk up by 15%*Gauge (max 75%), neither buff nor debuff, cannot be removed"
+  isGoodStatus: 1
+  icon: "status_wait_pwup_5"
 "1160201":
   name: "Bullet Mark"
   description: "+1 stack for every damage or debuff done by character other than Bulldozing Obsidius, add another 1 stack if character has debuff role, each stack of this status count as a debuff(max 20 stack)"
