--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -1255,6 +1255,7 @@
 3140104: Reverse Curse Mirror IV
 3140105: Reverse Curse Mirror V
 3140106: Reverse Curse Mirror VI
+8140203: Ocean Sky Strike
 # Tabit
 1151101: Rapid Overhaul
 1151102: Absorb & Convert
