--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -455,8 +455,25 @@ Damage is proportional to how many enemy(s) hit:<br>\
 # Theoreol S3 , passive
 1161103: "[base skill] Grants all allies {{ 2 | status_description }} for 1 next attack(s) /100%.<br>\
 [base skill] Grants all allies {{ 239 | status_description }} for 2 turns /100%"
-
 8161101: "[In auto action] Prioritize the third skill when there is an ally with less than 50% HP"
+
+# Tsuneaki variant passive
+1140202: "[base skill] Deal 130% of damage to target enemy /100%
+[base skill] Apply {{ 12 | status_description }} to target enemy for 2 next attack(s) /80%
+[when this skill is self-triggered] Activate Ocean Sky Strike to target enemy /40% (chance increase by 20% for every debuff(s) on target)"
+8140201: "Rokusei has a special gauge under his HP bar<br>\
+[When buffed] +1 to gauge (max 5)/100%<br>\
+[When gauge > 0] change {{ 24 | status_description }} to {{ 1140203 | status_description }} "
+8140202: ""
+8140204: ""
+8140205: ""
+8140206: ""
+8140207: ""
+8140208: ""
+8140209: ""
+8140210: ""
+8140211: ""
+8140212: ""
 
 # Victom variant passive, skevo
 8009205: "[while alive] Apply {{ 67 | status_description }} to all allies, maxed at 100000 view"
