--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -65,6 +65,7 @@
 [base skill] Add 1 combo for each hit/40%"
 8210101: "[When self has {{ 1 | status_description }} ] Atk +20% for all allies except self"
 8210104: ""
+8210105: ""
 
 # Cerastium S1 & Passive
 1123101: "[base skill] Deal 60% of damage to target enemy /100%<br>\
@@ -435,6 +436,18 @@ Max 3 times in 1 turn"
 [base skill] Apply {{ 3 | status_description }} and {{ 7 | status_description }} to ally with {{ 1211103 | status_description }} for 3 next attack(s) /100% <br>\
 [base skill] Target ally use S1 to target enemy /100%<br>\
 [When there are no ally with {{ 1211103 | status_description }} ] target random ally instead"
+2211101: "[base skill] Apply {{ 1 | status_description }} to target ally for 2 next attack(s) /100%<br>\
+[base skill] (extra_cond: skill receiver's HP<50) Apply {{ 275 | status_description }} to target ally for 3 next attack(s) /100%"
+2211102: "[base skill] Apply {{ 1 | status_description }} to target ally for 2 next attack(s) /100%<br>\
+[base skill] (extra_cond: skill receiver's HP<50) Apply {{ 275 | status_description }} to target ally for 3 next attack(s) /100%"
+2211103: "[base skill] Apply {{ 1 | status_description }} to target ally for 2 next attack(s) /100%<br>\
+[base skill] (extra_cond: skill receiver's HP<50) Apply {{ 275 | status_description }} to target ally for 3 next attack(s) /100%"
+3211101: "[When appearing] Apply {{ 1211111 | status_description }} to self for 1 next attack(s) /100%"
+3211102: "[When appearing] Apply {{ 1211111 | status_description }} to self for 1 next attack(s) /100%"
+3211103: "[When appearing] Apply {{ 1211111 | status_description }} to self for 1 next attack(s) /100%"
+3211104: "[When appearing] Apply {{ 1211111 | status_description }} to self for 1 next attack(s) /100%"
+3211105: "[When appearing] Apply {{ 1211111 | status_description }} to self for 1 next attack(s) /100%"
+3211106: "[When appearing] Apply {{ 1211111 | status_description }} to self for 1 next attack(s) /100%"
 8211101: "[when invoker's attack causes damage to enemy with {{ 1211101 | status_description }} ] +1 stack of {{ 1211101 | status_description }} "
 8211102: "[When ally with {{ 1211103 | status_description }} attack with active skill] Self attack target enemy(s) (max 2 times per turn, no combo gain) and add a stack of {{ 1211101 | status_description }} /100% <br>\
 Damage is proportional to how many enemy(s) hit:<br>\
@@ -442,6 +455,7 @@ Damage is proportional to how many enemy(s) hit:<br>\
 2 enemies = 30% atk <br>\
 3 enemies = 20% atk <br>\
 >3 enemies = 15% atk "
+8211106: "[AI choose target] (extra_cond: no other ally has {{ 24 | status_description }} ) Self {{ 24 | status_description }} "
 
 # Tabit S3 , passive
 1151103: "[base skill] Deal 180% of damage to target enemy /100% <br>\
@@ -458,8 +472,8 @@ Damage is proportional to how many enemy(s) hit:<br>\
 8161101: "[In auto action] Prioritize the third skill when there is an ally with less than 50% HP"
 
 # Tsuneaki variant passive
-1140202: "[base skill] Deal 130% of damage to target enemy /100%
-[base skill] Apply {{ 12 | status_description }} to target enemy for 2 next attack(s) /80%
+1140202: "[base skill] Deal 130% of damage to target enemy /100%<br>\
+[base skill] Apply {{ 12 | status_description }} to target enemy for 2 next attack(s) /80%<br>\
 [when this skill is self-triggered] Activate Ocean Sky Strike to target enemy /40% (chance increase by 20% for every debuff(s) on target)"
 8140201: "Rokusei has a special gauge under his HP bar<br>\
 [When buffed] +1 to gauge (max 5)/100%<br>\
